--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,33 @@
     --main-text-color: #fff;
 }
 
+
+/* GENERAL */
+
+h1, h2,h3 {
+    font-family: 'Crimson Text', sans-serif;
+}
+
+
+/* PAGE SECTIONS */
+.page-section {
+    padding: 6rem 0 
+}
+.page-section .section-heading.h2, .page-section h2.section-heading {
+    font-size: 2.5rem;
+    margin-top: 0;
+    margin-bottom: 1rem 
+}
+.page-section .section-subheading.h3, .page-section h3.section-subheading {
+    font-size: 1rem;
+    font-weight: 400;
+    font-style: italic;
+    font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    margin-bottom: 4rem 
+}
+
+
+/* NAV */
 nav {
     background-color: #181a1c;
 }
@@ -154,9 +181,6 @@ header.header-image .heading {
     margin: 0 10px;
 }
 
-.page-section{
-    padding: 6rem 0;
-}
 
 .page-section h2.section-heading {
     font-size: 2.5rem;
@@ -172,3 +196,36 @@ header.header-image .heading {
     }
 
 }
+
+/* SERVICES */
+
+.bg-services{
+    background-color: #212529;
+}
+
+#services .services-item .services-link {
+    position: relative;
+    display: block;
+    margin: 0 auto 
+}
+
+#services .services-item .services-caption {
+    padding: 1.5rem;
+    text-align: center 
+}
+#services .services-item .services-caption .services-caption-heading {
+    font-size: 1.5rem;
+    font-family: Montserrat, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    margin-bottom: 0 
+}
+#services .services-item .services-caption .services-caption-subheading {
+    font-style: italic;
+    font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" 
+}
+
+#services .services-link{
+   text-decoration: none;
+   color: #fff;
+}
+
+
