Created testimonials section

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,26 +5,32 @@
 
 /* GENERAL */
 
-h1, h2,h3 {
+h1,
+h2,
+h3 {
     font-family: 'Crimson Text', sans-serif;
 }
 
 
 /* PAGE SECTIONS */
 .page-section {
-    padding: 6rem 0 
+    padding: 6rem 0
 }
-.page-section .section-heading.h2, .page-section h2.section-heading {
+
+.page-section .section-heading.h2,
+.page-section h2.section-heading {
     font-size: 2.5rem;
     margin-top: 0;
-    margin-bottom: 1rem 
+    margin-bottom: 1rem
 }
-.page-section .section-subheading.h3, .page-section h3.section-subheading {
+
+.page-section .section-subheading.h3,
+.page-section h3.section-subheading {
     font-size: 1rem;
     font-weight: 400;
     font-style: italic;
     font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    margin-bottom: 4rem 
+    margin-bottom: 4rem
 }
 
 
@@ -148,7 +154,7 @@ header.header-image .heading {
 
     .header-image {
         padding-top: 10.5rem;
-}
+    }
 
 
     .navbar-brand img {
@@ -166,7 +172,7 @@ header.header-image .heading {
         font-size: 1.5rem;
         line-height: 1.5rem;
     }
-    
+
     header.header-image .heading {
         font-size: 3rem;
         line-height: 3.25rem;
@@ -199,14 +205,14 @@ header.header-image .heading {
 
 /* FEATURES */
 
-.features > .container > .row > .col-md-4{
+.features>.container>.row>.col-md-4 {
     padding: 0 15px;
 }
 
 
 @media screen and (min-width: 1000px) {
 
-    .features > .container > .row > .col-md-4{
+    .features>.container>.row>.col-md-4 {
         padding: 0 40px;
     }
 
@@ -214,33 +220,35 @@ header.header-image .heading {
 
 /* SERVICES */
 
-.bg-services{
+.bg-services {
     background-color: #212529;
 }
 
 #services .services-item .services-link {
     position: relative;
     display: block;
-    margin: 0 auto 
+    margin: 0 auto
 }
 
 #services .services-item .services-caption {
     padding: 1.5rem;
-    text-align: center 
+    text-align: center
 }
+
 #services .services-item .services-caption .services-caption-heading {
     font-size: 1.5rem;
     font-family: Montserrat, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    margin-bottom: 0 
-}
-#services .services-item .services-caption .services-caption-subheading {
-    font-style: italic;
-    font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" 
+    margin-bottom: 0
 }
 
-#services .services-link{
-   text-decoration: none;
-   color: #fff;
+#services .services-item .services-caption .services-caption-subheading {
+    font-style: italic;
+    font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+}
+
+#services .services-link {
+    text-decoration: none;
+    color: #fff;
 }
 
 
@@ -248,46 +256,93 @@ header.header-image .heading {
 .our-fleet-img {
     max-width: 35rem;
     margin-left: auto;
-    margin-right: auto 
+    margin-right: auto
 }
+
 .our-fleet-img img {
     width: 100%;
     height: auto;
     transition: all .5s ease;
-    transform: scale(1) 
+    transform: scale(1)
 }
+
 .our-fleet-img img:hover {
     transform: scale(1.2) perspective(1px);
-    color: grey 
+    color: grey
 }
+
 .our-fleet-img p {
     margin-top: -45px;
-    font-weight: 600 
+    font-weight: 600
 }
+
 .our-fleet-img div {
-    margin-top: -15px 
+    margin-top: -15px
 }
+
 .our-fleet-img .btn {
     background-color: #000;
-    color: #fff 
+    color: #fff
 }
+
 .our-fleet-img .btn:hover {
     background-color: #fff !important;
     color: #000 !important;
-    border: 1px solid #000 
+    border: 1px solid #000
 }
 
 
 @media (max-width:1000px) {
     .our-fleet-img p {
-        margin-top: -25px 
-   }
+        margin-top: -25px
+    }
 }
+
 @media (max-width:650px) {
     .our-fleet-img p {
-        margin-top: -50px 
-   }
+        margin-top: -50px
+    }
+
     .our-fleet-img {
-        margin-bottom: 60px 
-   }
+        margin-bottom: 60px
+    }
+}
+
+/* TESTIMONIALS */
+.ratings .fa-star {
+    color: #fbc634
+}
+
+.carousel-item p,
+h5 {
+    color: #000
+}
+
+.carousel-control-next,
+.carousel-control-prev{
+    visibility: hidden;
+}
+
+.carousel .carousel-item {
+    transition-duration: 2s;
+}
+
+@media (min-width: 768px) {
+
+    .carousel-control-next,
+    .carousel-control-prev {
+        filter: invert(100%);
+        visibility: visible;
+    }
+}
+
+/* A LINK */
+a:hover {
+    color: #bdbaba !important
+}
+
+a:not([href]):not([class]),
+a:not([href]):not([class]):hover {
+    color: inherit;
+    text-decoration: none
 }
