--- a/assets/style.css
+++ b/assets/style.css
@@ -7,10 +7,21 @@
 
 h1,
 h2,
-h3 {
-    font-family: 'Crimson Text', sans-serif;
+h3,
+footer > h5 {
+    font-family: 'Crimson Text', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" 
 }
 
+/* A LINK */
+a:hover {
+    color: #bdbaba !important
+}
+
+a:not([href]):not([class]),
+a:not([href]):not([class]):hover {
+    color: inherit;
+    text-decoration: none
+}
 
 /* PAGE SECTIONS */
 .page-section {
@@ -109,12 +120,10 @@ button.navbar-toggler {
     padding-top: 3rem;
     padding-bottom: 3rem;
     text-align: center;
-    color: #fff;
-    background-image: url('../assets/images/header-image.webp');
+    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1681791762/Platinum%20Line%20images/header-image.webp');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    height: 60vh;
 }
 
 header.header-image .btn {
@@ -153,12 +162,13 @@ header.header-image .heading {
 @media screen and (min-width: 600px) {
 
     .header-image {
-        padding-top: 10.5rem;
+        padding-top: 12.5rem;
+        height: 60vh;
     }
 
 
     .navbar-brand img {
-        height: 6rem;
+        height: 5rem;
     }
 
     .nav-item:hover:after,
@@ -179,6 +189,14 @@ header.header-image .heading {
     }
 
 }
+
+@media screen and (max-width: 1300px){
+    .header-image {
+        padding-top: 10.5rem;
+        height: fit-content;
+    }
+}
+
 
 /* INTRO SECTION */
 
@@ -336,13 +354,40 @@ h5 {
     }
 }
 
-/* A LINK */
-a:hover {
-    color: #bdbaba !important
+/* FOOTER */
+.footer {
+    background-color: #181a1c;
+    font-size: .9rem;
 }
 
-a:not([href]):not([class]),
-a:not([href]):not([class]):hover {
-    color: inherit;
-    text-decoration: none
+
+footer {
+    text-align: center 
+}
+.logo-footer {
+    max-width: 14rem;
+    margin-left: auto;
+    margin-right: auto 
+}
+.logo-footer img {
+    width: 100%;
+    height: auto 
+}
+
+.content-to-hide-sm {
+    display: none; 
+}
+
+@media (min-width:768px) {
+    .content-to-hide-sm {
+        display: inline-block; 
+   }
+
+   footer {
+    text-align: left 
+}
+    .footer-link-policy a {
+        display: block;
+        margin-right: 0 !important 
+   }
 }
