--- a/assets/style.css
+++ b/assets/style.css
@@ -8,8 +8,9 @@
 h1,
 h2,
 h3,
-footer > h5 {
-    font-family: 'Crimson Text', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" 
+footer>h5,
+header.header-forms .heading {
+    font-family: 'Crimson Text', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 }
 
 /* A LINK */
@@ -49,7 +50,18 @@ a:not([href]):not([class]):hover {
 nav {
     background-color: #181a1c;
 }
+.nav-item{
+    margin-left: 1rem;
+}
 
+.nav-item .nav-link {
+    letter-spacing: .0625em;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: 0.5rem !important;
+    padding-left: 0.5rem !important;
+}
 
 a.nav-link {
     display: block;
@@ -58,6 +70,7 @@ a.nav-link {
     text-decoration: none;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
+
 
 .nav-item:after {
     content: "";
@@ -120,6 +133,7 @@ button.navbar-toggler {
     padding-top: 3rem;
     padding-bottom: 3rem;
     text-align: center;
+    color: #fff;
     background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1681791762/Platinum%20Line%20images/header-image.webp');
     background-repeat: no-repeat;
     background-position: center center;
@@ -190,7 +204,7 @@ header.header-image .heading {
 
 }
 
-@media screen and (max-width: 1300px){
+@media screen and (max-width: 1300px) {
     .header-image {
         padding-top: 10.5rem;
         height: fit-content;
@@ -337,7 +351,7 @@ h5 {
 }
 
 .carousel-control-next,
-.carousel-control-prev{
+.carousel-control-prev {
     visibility: hidden;
 }
 
@@ -362,32 +376,67 @@ h5 {
 
 
 footer {
-    text-align: center 
+    text-align: center
 }
+
 .logo-footer {
     max-width: 14rem;
     margin-left: auto;
-    margin-right: auto 
+    margin-right: auto
 }
+
 .logo-footer img {
     width: 100%;
-    height: auto 
+    height: auto
 }
 
 .content-to-hide-sm {
-    display: none; 
+    display: none;
 }
 
 @media (min-width:768px) {
     .content-to-hide-sm {
-        display: inline-block; 
-   }
+        display: inline-block;
+    }
 
-   footer {
-    text-align: left 
-}
+    footer {
+        text-align: left
+    }
+
     .footer-link-policy a {
         display: block;
-        margin-right: 0 !important 
-   }
+        margin-right: 0 !important
+    }
+}
+
+/* AVAILABILITY */
+
+.header-forms {
+    padding-top: 30%;
+    padding-bottom: 30%;
+    text-align: center;
+    color: #fff;
+    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1681791762/Platinum%20Line%20images/header-image.webp');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
+
+header.header-forms .heading {
+    font-size: 1.8rem;
+    font-weight: 700;
+}
+
+
+@media screen and (min-width: 768px) {
+
+    .header-forms {
+        padding-top: 13%;
+        padding-bottom: 13%;
+    }
+
+    header.header-forms .heading {
+        font-size: 2.2rem;
+    }
 }
