--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,19 @@ header.header-forms .heading {
     font-family: 'Crimson Text', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 }
 
+/* FADE IN ANIMATION */
+
+section{
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 2s all ease;
+}
+
+section.active{
+    transform: translateY(0);
+    opacity: 1;
+}
+
 /* A LINK */
 a:hover {
     color: #bdbaba !important
@@ -50,7 +63,8 @@ a:not([href]):not([class]):hover {
 nav {
     background-color: #181a1c;
 }
-.nav-item{
+
+.nav-item {
     margin-left: 1rem;
 }
 
@@ -87,6 +101,7 @@ a.nav-link {
 .nav-item.active:after {
     background-color: #d5d7d8;
 }
+
 
 @media (prefers-reduced-motion: reduce) {
     .nav-link {
@@ -140,6 +155,7 @@ button.navbar-toggler {
     background-size: cover;
 }
 
+
 header.header-image .btn {
     background: #000;
     color: #fff;
@@ -166,18 +182,26 @@ header.header-image .subheading {
     font-family: Lato, sans-serif
 }
 
-header.header-image .heading {
-    font-size: 2.2rem;
+header.header-image .heading,
+.header-services .heading {
+    font-size: 2.7rem;
     font-weight: 700;
     line-height: 3.25rem;
     font-family: 'Crimson Text', sans-serif
 }
 
+
+
 @media screen and (min-width: 600px) {
 
     .header-image {
+        font-size: 3rem;
         padding-top: 12.5rem;
         height: 60vh;
+    }
+
+    .header-services .heading {
+        font-size: 3rem;
     }
 
 
@@ -440,23 +464,35 @@ header.header-forms .heading {
         font-size: 2.2rem;
     }
 
-    .form-group{
+    .form-group {
         margin-left: 20px;
     }
 }
 
 /* SPECIAL OCCASIONS HEADER */
 
-.occasions-header {
+
+.header-services {
     text-align: center;
     color: #fff;
-    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1681794443/Platinum%20Line%20images/special-occasions-index.webp');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
+    padding-top: 15rem;
+    padding-bottom: 8rem;
+
 }
 
-.header{
-    padding-top: 15rem;
-    padding-bottom: 7rem;
+.occasions-header {
+    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1686346989/special-occasions_qrgkyj.jpg');
+}
+
+
+@media screen and (min-width: 768px) {
+    .header-services {
+        padding-top: 15rem;
+        padding-bottom: 15rem;
+
+    }
+
 }
