--- a/assets/style.css
+++ b/assets/style.css
@@ -428,7 +428,8 @@ header.header-forms .heading
 
 .carousel-item p,
 h5 {
-    color: #000
+    color: #000;
+    margin-bottom: 2rem;
 }
 
 .carousel-control-next,
@@ -440,14 +441,13 @@ h5 {
     transition-duration: 2s;
 }
 
-@media (min-width: 768px) {
 
-    .carousel-control-next,
-    .carousel-control-prev {
-        filter: invert(100%);
-        visibility: visible;
-    }
+.carousel-indicators [data-bs-target]{
+   background-color: #1D232A !important;
+   padding-top: 10px;
 }
+
+
 
 /* FOOTER */
 .footer {
