--- a/assets/style.css
+++ b/assets/style.css
@@ -16,6 +16,11 @@ footer>h5 {
     font-family: 'Spectral', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 }
 
+
+.border-color {
+    border: 1px solid #bdb9b9;
+    box-shadow: 0px 5px 10px 0px rgb(144 145 145 / 70%);
+}
 /* FADE IN ANIMATION */
 
 section {
