Airport transfer pae created

--- a/assets/style.css
+++ b/assets/style.css
@@ -556,3 +556,7 @@ footer {
 .events-header {
     background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1689023356/Platinum%20Line%20images/events22_ru01lr.jpg');
 }
+
+.airport-header {
+    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1689024022/Platinum%20Line%20images/airport-transfer_mlbeih.jpg');
+}
