Created conference and conventions page

--- a/assets/style.css
+++ b/assets/style.css
@@ -560,3 +560,7 @@ footer {
 .airport-header {
     background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1689024022/Platinum%20Line%20images/airport-transfer_mlbeih.jpg');
 }
+
+.conference-header {
+    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1689024409/Platinum%20Line%20images/conference-conventions_av2ub5.webp');
+}
