Images were too dark, replaced with original bright image

--- a/assets/style.css
+++ b/assets/style.css
@@ -83,13 +83,13 @@ button.navbar-toggler {
     background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1689107382/Platinum%20Line%20images/airport_tmqmuq.jpg');
 }
 .conference-header {
-    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1689024409/Platinum%20Line%20images/conference-conventions_av2ub5.webp');
+    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1692304841/Platinum%20Line%20images/conference_hcwlfc_1_1_jgrpkv.webp');
 }
 .corporate-header {
-    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1689024851/Platinum%20Line%20images/corporate_wba3qa.jpg');
+    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1692304582/Platinum%20Line%20images/pexels-pavel-danilyuk-8425044-modified_1_c1z8ja.jpg');
 }
 .tours-header {
-    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1689147178/Platinum%20Line%20images/tourse_compressed_wblprz.jpg');
+    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1692304524/Platinum%20Line%20images/pexels-pavel-danilyuk-8425044-modified_v1xlmu.jpg');
 }
 /* headers */
 h2, h3, footer>h5 {
@@ -145,7 +145,7 @@ header.header-image .subheading {
     padding-bottom: 8rem;
     text-align: center;
     color: #fff;
-    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1690834806/Platinum%20Line%20images/hero-image.jpg');
+    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1691663068/martin-katler-y3neNkE6efI-unsplash-modified2_aoqcm6.jpg');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
