--- a/assets/style.css
+++ b/assets/style.css
@@ -67,6 +67,18 @@ button.navbar-toggler {
 }
 /*********** HEADERS ********/
 /* bg images */
+
+.header-image {
+    padding-top: 3rem;
+    padding-bottom: 8rem;
+    text-align: center;
+    color: #fff;
+    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1692344869/martin-katler-y3neNkE6efI-unsplash-modified2-modified_xtoerb.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
 .header-forms{
     background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1691532478/woman-getting-taxi-car-modified-modified_rdhtrk.jpg');
 }
@@ -83,13 +95,13 @@ button.navbar-toggler {
     background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1689107382/Platinum%20Line%20images/airport_tmqmuq.jpg');
 }
 .conference-header {
-    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1692304841/Platinum%20Line%20images/conference_hcwlfc_1_1_jgrpkv.webp');
+    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1692344684/conference-modified_u3vynt.webp');
 }
 .corporate-header {
     background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1692304582/Platinum%20Line%20images/pexels-pavel-danilyuk-8425044-modified_1_c1z8ja.jpg');
 }
 .tours-header {
-    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1692304524/Platinum%20Line%20images/pexels-pavel-danilyuk-8425044-modified_v1xlmu.jpg');
+    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1692304308/Platinum%20Line%20images/tours.webp');
 }
 /* headers */
 h2, h3, footer>h5 {
@@ -140,16 +152,7 @@ header.header-image .subheading {
     margin-bottom: 1rem;
 }
 /* Hero Image */
-.header-image {
-    padding-top: 3rem;
-    padding-bottom: 8rem;
-    text-align: center;
-    color: #fff;
-    background-image: url('https://res.cloudinary.com/irissmok/image/upload/v1691663068/martin-katler-y3neNkE6efI-unsplash-modified2_aoqcm6.jpg');
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-}
+
 @supports (-webkit-touch-callout: none) {
     header.header-image {
         background-attachment: scroll;
